# eloquentlog-desktop-gtk

./: .dockerignore  .gitlab-ci.yml  CHANGELOG  Cargo.toml  Dockerfile  Makefile  README.rst  make.conf
src/ui/: about_dialog.xml  header_bar.xml  menu_bar.xml  menubar.xml  window.xml
