[package]
name = "eloquentlog-desktop-gtk"
description = """\
A desktop application built with GTK for Eloquentlog.\
"""
version = "0.0.1"
authors = ["Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>"]
edition = "2018"
readme = "README.md"
homepage = "https://gitlab.com/eloquentlog/eloquentlog-desktop-gtk"
documentation = "https://gitlab.com/eloquentlog/eloquentlog-desktop-gtk"
repository = "https://gitlab.com/eloquentlog/eloquentlog-desktop-gtk"
license = "GPL-3.0-or-later"
keywords = ["gtk"]
categories = ["gui"]

autobins = false

exclude = [
  ".cargo-husky",
  "Makefile",
  "rust-toolchain",
  ".gitignore",
  ".clippy.toml",
  ".rustfmt.toml",
  ".gitlab-ci.yml",
]

[[bin]]
name = "eloquentlog"

[dependencies]
gio = "^0.9"

[dependencies.gtk]
version = "^0.9"
features = ["v3_16"]

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
